Fixed the extra padding and added the company image

--- a/src/sass/public/UI/header/_header-mobile.scss
+++ b/src/sass/public/UI/header/_header-mobile.scss
@@ -2,7 +2,7 @@
 @use 'base/mixins' as m;
 
 .header-mobile {
-    padding: 2rem 4rem;
+    padding: 1rem 4rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
